--- a/client/app/components/contact/contact.html
+++ b/client/app/components/contact/contact.html
@@ -1,1 +1,67 @@
-<div>{{value}}</div>
+<div class="list-group">
+    <div class="list-group-item list-group-item-info">
+        <!-- View section -->
+        <section ng-if="!$ctrl.editing">
+            <h4 class="list-group-item-heading">{{$ctrl.source.name}}</h4>
+            <p class="list-group-item-text">Phone: {{$ctrl.source.phone}}</p>
+            <p class="list-group-item-text">Email: {{$ctrl.source.email}}</p>
+            <div class="btn-group list-group-controlls">
+                <button ng-click="$ctrl.editContact($ctrl.source)" class="btn btn-success">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                </button>
+                <button ng-click="$ctrl.deleteContact($ctrl.source._id)" class="btn btn-danger">
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                </button>
+            </div>
+        </section>
+        <!-- Edit section -->
+        <section class="edit-contact" ng-if="$ctrl.editing">
+            <h3 class="list-group-item-heading">Contact editing</h3>
+            <form class="form-horizontal" name="editForm" ng-submit="$ctrl.submitEdit(editForm)"novalidate>
+                <div class="form-group">
+                    <label for="inputName" class="col-sm-2 control-label list-group-item-text">Name</label>
+                    <div class="col-sm-10">
+                        <input type="text"
+                            class="form-control"
+                            id="inputName"
+                            placeholder="Name"
+                            name="contact_name"
+                            ng-model="$ctrl.formUser.name"
+                            ng-required="true"
+                            ng-minlength="3"
+                            ng-maxlength="30">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail" class="col-sm-2 control-label list-group-item-text">Email</label>
+                    <div class="col-sm-10">
+                        <input type="email"
+                            class="form-control"
+                            id="inputEmail"
+                            placeholder="Email"
+                            name="contact_email"
+                            ng-model="$ctrl.formUser.email"
+                            ng-required="true">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputPhone" class="col-sm-2 control-label list-group-item-text">Phone</label>
+                    <div class="col-sm-10">
+                        <input type="phone"
+                            class="form-control"
+                            id="inputPhone"
+                            placeholder="Password"
+                            name="contact_phone"
+                            ng-model="$ctrl.formUser.phone">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-8 col-sm-4 text-right">
+                        <button type="submit" class="btn btn-success">Save</button>
+                        <button ng-click="$ctrl.discardEditing()" type="button" class="btn btn-danger">Cancel</button>
+                    </div>
+                </div>
+            </form>
+        </section>
+    </div>
+</div>
