--- a/client/app/components/contacts/contacts.html
+++ b/client/app/components/contacts/contacts.html
@@ -1,1 +1,7 @@
-<div>{{$ctrl}}</div>
+<contact ng-repeat="contact in $ctrl.list.data" source="contact"></contact>
+<nav aria-label="Contact pagination">
+    <ul class="pager">
+        <li class="previous"><a href="#"> <<< </a></li>
+        <li class="next"><a href="#"> >>> </a></li>
+    </ul>
+</nav>
