--- a/client/app/components/contacts/contacts.html
+++ b/client/app/components/contacts/contacts.html
@@ -1,7 +1,7 @@
 <contact ng-repeat="contact in $ctrl.list.data" source="contact"></contact>
 <nav aria-label="Contact pagination">
     <ul class="pager">
-        <li class="previous"><a href="#"> <<< </a></li>
-        <li class="next"><a href="#"> >>> </a></li>
+        <li class="previous"><a href="#" ng-click="$ctrl.listPrev()"> <<< </a></li>
+        <li class="next"><a href="#" ng-click="$ctrl.listNext()"> >>> </a></li>
     </ul>
 </nav>
